--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./favicon_io/favicon.ico" type="image/x-icon">
-    <title>Mad Horse</title>
+    <title>Crazy Horse</title>
 </head>
 <body>
 
