--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 </head>
 <body>
 
-    <!-- used to draw graphics, on the fly, via JavaScript -->
+    <!-- used to draw graphics via JavaScript -->
     <canvas id="canvas"></canvas>
 
     <script src="script.js"></script>
+
+
+    <!-- player asset -->
+    <img id="p" src="./Assets/player.png" alt="player">
+
+    <!-- enemy assets -->
     
 </body>
 </html>
