added enemy images & custom fonts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./favicon_io/favicon.ico" type="image/x-icon">
     <title>Crazy Horse</title>
 </head>
@@ -19,7 +22,11 @@
     <!-- player asset -->
     <img id="p" src="./Assets/player.png" alt="player">
 
-    <!-- enemy assets -->
+    <!-- enemy asset -->
+    <img id="e" src="./Assets/angler1.png" alt="enemy">
+
+    <!-- projectile asset -->
+    <img id="shoot" src="./Assets/projectile.png" alt="projectile">
     
 </body>
 </html>
