--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
     <!-- projectile asset -->
     <img id="shoot" src="./Assets/projectile.png" alt="projectile">
+
+    <!-- props -->
+    <img id="gears" src="./Assets/gears.png" alt="gears">
     
 </body>
 </html>
