Explosion classes added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
     <!-- props -->
     <img id="gears" src="./Assets/gears.png" alt="gears">
+    <img id="fire" src="./Assets/fireExplosion.png" alt="fire">
+    <img id="smoke" src="./Assets/smokeExplosion.png" alt="smoke">
     
 </body>
 </html>
