yet to add sounds

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <img id="gears" src="./Assets/gears.png" alt="gears">
     <img id="fire" src="./Assets/fireExplosion.png" alt="fire">
     <img id="smoke" src="./Assets/smokeExplosion.png" alt="smoke">
+
+    <!-- sound effects -->
+    <audio id="shootSound" src="./Assets/" preload="auto"></audio>
     
 </body>
 </html>
